# rocm-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
include/: rocprofiler.h  rocwmma.h
src/: error.rs  lib.rs
src/hip/: bindings.rs  device.rs  error.rs  event.rs  ffi.rs  kernel.rs  memory.rs  mod.rs  module.rs  stream.rs  utils.rs
src/hip/examples/rust_kernel/: Cargo.toml
src/hip/examples/rust_kernel/src/: main.rs
src/hip/examples/rust_kernel_async/: Cargo.toml
src/hip/examples/rust_kernel_async/src/: main.rs
src/hip/examples/saxpy/: Cargo.toml
src/hip/examples/saxpy/src/: main.rs
src/hip/examples/sort/: Cargo.toml
src/hip/examples/sort/src/: main.rs
src/hip/examples/vector_add/: main.rs  vector_add.hsaco
src/hip/memory/: memory_ext.rs
src/hip/memory_ext/: mod.rs  sorting.rs
src/miopen/: activation.rs  batchnorm.rs  bindings.rs  convolution.rs  ctc_loss.rs  dropout.rs  error.rs  ffi.rs  fusion.rs  handle.rs  lrn.rs  mha.rs  mod.rs  pooling.rs  reduce.rs  rnn.rs  softmax.rs  tensor.rs
src/miopen/examples/basic/: Cargo.toml
src/miopen/examples/basic/src/: main.rs
src/miopen/examples/multi_tensor/: Cargo.toml
src/miopen/examples/multi_tensor/src/: data.rs  kernels.rs  layer.rs  main.rs
src/rocarray/: error.rs  kernels.hip  kernels.rs  mod.rs  random.rs  sorting.rs  sorting_kernels.hip
src/rocblas/: async_ops.rs  bindings.rs  error.rs  ffi.rs  handle.rs  level1.rs  level2.rs  level3.rs  macros.rs  mod.rs  safe.rs  types.rs  utils.rs
src/rocblas/examples/basic/: Cargo.toml
src/rocblas/examples/basic/src/: main.rs
src/rocfft/: bindings.rs  cache.rs  description.rs  error.rs  examples.rs  execution.rs  ffi.rs  field.rs  mod.rs  plan.rs  utils.rs
src/rocmsmi/: mod.rs
src/rocprofiler/: bindings.rs  context.rs  error.rs  mod.rs  profiler.rs  types.rs
src/rocprofiler/examples/: rocprofiler_example.rs
src/rocrand/: bindings.rs  distribution.rs  error.rs  generator.rs  mod.rs  utils.rs
src/rocrand/examples/normal/: Cargo.toml
src/rocrand/examples/normal/src/: main.rs
src/rocsolver/: bindings.rs  ffi.rs  gebrd.rs  gesvd.rs  mod.rs  potrf.rs  syevd.rs  sytrd.rs
src/rocsparse/: bindings.rs  conversion.rs  descriptor.rs  error.rs  handle.rs  matrix.rs  mod.rs  pruning.rs  vector.rs
